--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "league/flysystem": "1.0"
     },
     "license": "MIT",
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require-dev": {
       "phpunit/phpunit": "~4.0"
     },
